lab1/Test/L1-A-9-15.cmm
float eGk ( int eS4W3IXmUX7oMpEdq2Gc ) {
}
struct kagiI4arpe1M {
  struct G SUmerBLtChB1v4v , _4GDs3 [ 478263666 ] 
    = gYq = Yul >= Lc * qGl_U5QNKK69Cy3yfh ( cTpXP_GWL6fsndc 
    || fprKpxDAI && wQud <= Zm2mDpsLUPSNMqUqgO + - KIKV29XZm9kQpYngZ 
    [ CgWMAAjjmHG4o && EGjRF < EZaLLwWKsaWy1pwLrK + ( 
    wiQoVZoV_edf11uXvq_1 > ZyPLBSEGDArm_ ( KCQgEn6uoQ_VjtMCeUx 
    , TnW4sd || WGyPGWA && AtVh0Bg != gX5Ofps == - J ) 
    || 939931155.119719934 * 1778391392 ) . XUP ] - Joawm8P 
    ) . cOAOvNk / ! - EmHMV8VGaos ( ) ;
};
struct {
  int iFaUOix7GrG2k9s ;
  int wRIf ;
};
struct df9TWNUkYFI mYfZxNK9hBn0kkXeKXs1 
;
int JWhgdx1w4tSZh_3Gnv3 , KDV3j75ymxwRmg_7Oc 

;
int ;
int LTVVTW ( ) {
{
  }}
int ;
int ;
int ;
;
int IieZYMf3b1JCAe2p7H ( int fRAfzpN_i , int to ) 
  {
}
int dby ( ) {
}
int p2A1NhGNXaatl0sYDk ( ) {
  K ;
  tysP1 ;
  Q ;
  kZ1Dod_kmPzkHnfDy6 ;
  if ( tPI9ch11CA3QqlvDpaEj )   if ( UY )   while 
    ( LJ1DXH4gm5 )   if ( TqsE9tXymoXvSKgp2dF8 )   LYffrLLLK 
    ;
else   g5CyXfEgVWaQeqW ;


else   if ( Ae9 )   L2A0Dntj0Rz5fiSuUus ;
else   if ( I__fWWF )   if ( RS4YAWCpHRBBl )   return 
    mY 





}
int ;
int ;
